# nomos-simulations

./: .gitignore  README.md  build_cases.py  run.sh
.github/workflows/: ci.yaml
configs/: branch_1764_7_view_10_default.json  branch_1764_7_view_10_optimistic.json  branch_1764_7_view_10_pessimistic.json  branch_1764_7_view_1_default.json  branch_2256_8_view_10_default.json  branch_2256_8_view_10_optimistic.json  branch_2256_8_view_10_pessimistic.json  branch_2256_8_view_1_default.json  branch_2880_9_view_10_default.json  branch_2880_9_view_10_optimistic.json  branch_2880_9_view_10_pessimistic.json  branch_2880_9_view_1_default.json  branch_3105_5_view_10_default.json  branch_3590_10_view_10_default.json  branch_3590_10_view_10_optimistic.json  branch_3590_10_view_10_pessimistic.json  branch_3590_10_view_1_default.json  branch_3924_6_view_10_default.json  branch_4378_11_view_10_default.json  branch_4378_11_view_10_optimistic.json  branch_4378_11_view_10_pessimistic.json  branch_4378_11_view_1_default.json  branch_4872_7_view_10_default.json  branch_4872_7_view_10_optimistic.json  branch_4872_7_view_10_pessimistic.json  branch_4872_7_view_1_default.json  branch_5824_8_view_10_default.json  branch_5824_8_view_10_optimistic.json  branch_5824_8_view_1_default.json  branch_6993_9_view_10_default.json  branch_6993_9_view_10_optimistic.json  branch_8180_10_view_10_optimistic.json  branch_8180_10_view_10_pessimistic.json  tree_10000_17_view_10_default.json  tree_10000_17_view_10_optimistic.json  tree_10000_17_view_10_pessimistic.json  tree_10000_17_view_1_default.json  tree_10000_57_view_10_default.json  tree_10000_57_view_10_optimistic.json  tree_10000_57_view_10_pessimistic.json  (+21 more)
deprecated/mixnet-overall/: README.md
deprecated/mixnet-overall/protocol/: gossip.py  test_temporalmix.py
deprecated/mixnet-overall/sim/: connection.py
deprecated/mixnet-v1/components/: Cargo.toml  README.md
deprecated/mixnet-v1/components/ordering/: Cargo.toml
deprecated/mixnet-v1/components/ordering/src/: outputs.rs
deprecated/mixnet-v1/fullcycle/: README.md
deprecated/node-carnot/configs/: branch_3105_5_view_10_optimistic.json  branch_3105_5_view_1_default.json  branch_3924_6_view_10_optimistic.json  branch_3924_6_view_10_pessimistic.json  branch_5824_8_view_10_pessimistic.json  branch_8180_10_view_1_default.json  tree_1620_3_view_1_default.json  tree_5000_9_view_10_optimistic.json
mixnet/: README.md  config.ci.yaml  requirements.txt
mixnet-analysis/: aggregate.py  datamsgcount.py  latency.py  pyrightconfig.json
mixnet-rs/: Cargo.toml
mixnet-rs/analysis/: coeff.py  latency.py
mixnet-rs/dissemination/: Cargo.toml
mixnet-rs/dissemination/src/: iteration.rs  main.rs  node.rs  paramset.rs  queue.rs  topology.rs
mixnet-rs/ordering/: Cargo.toml
mixnet-rs/ordering/src/: iteration.rs  main.rs  message.rs  ordercoeff.rs  outputs.rs  paramset.rs  sequence.rs  topology.rs
mixnet-rs/protocol/: Cargo.toml
mixnet-rs/queue/: Cargo.toml
mixnet-rs/single-path/: Cargo.toml
mixnet-rs/single-path/src/: iteration.rs  main.rs  node.rs  ordercoeff.rs  paramset.rs
mixnet/analysis/: README.md  coeff.py  common.py
mixnet/cmd/: main.py  queuesim.py  queuesim_benchmark.py  queuesim_merge.py  queuesim_plot.py  queuesim_plot_crossexp.py  queuesim_stats.py
mixnet/dissemination/: README.md
mixnet/framework/: asyncio.py  framework.py  usim.py
mixnet/ordering/: README.md
mixnet/protocol/: config.py  connection.py  gossip.py  node.py  nomssip.py  sphinx.py  temporalmix.py  test_node.py  test_sphinx.py  test_utils.py
mixnet/queuesim/: benchmark.py  config.py  message.py  node.py  paramset.py  plot.py  queuesim.py  simulation.py  statistics.py  test_paramset.py  util.py
mixnet/sim/: config.py  connection.py  message.py  simulation.py  stats.py  test_connection.py  test_message.py  test_topology.py  topology.py
netrunner/: Cargo.toml  README.md
netrunner/config/: mixnode.json
network-runner/: Cargo.toml
network-runner/config/: mixnode.json
network-runner/src/: settings.rs
node/configs/: branch_3105_5_view_10_pessimistic.json  branch_3924_6_view_1_default.json  branch_6993_9_view_10_pessimistic.json  branch_6993_9_view_1_default.json  branch_8180_10_view_10_default.json  tree_1620_3_view_10_default.json  tree_5000_9_view_10_default.json
node/scripts/: data_to_csv.py  run_configs.py  test_cases.csv
output/: tree_1000_11_view_1_default.csv  tree_100_3_view_1_default.csv  tree_100_3_view_1_default.json  tree_500_7_view_1_default.csv
scripts/: README.md  analysis.py  authenticator_cost.py  build_cases.py  build_cases.sh  build_config.py  build_config.sh  build_tests.py  data_to_csv.py  emission.py  latency.py  mixlog.py  run.sh  run_configs.py  test_cases.csv
scripts/config_builder/: record.json  template.json
simlib/: Cargo.toml
simlib/blendnet-sims/: Cargo.toml  README.md
simlib/blendnet-sims/config/: blendnet.json
simlib/blendnet-sims/scripts/: README.md  batch.py  emission.py  latency.py  mixlog.py  monitor.py
simlib/blendnet-sims/src/: main.rs  settings.rs
simlib/blendnet-sims/src/node/blend/: consensus_streams.rs  log.rs  mod.rs  scheduler.rs  sender_wrapper.rs  state.rs  stream_wrapper.rs  topology.rs
simlib/blendnet-sims/src/node/mix/: mod.rs  scheduler.rs  topology.rs
simlib/mixnet-sims/: Cargo.toml  README.md
simlib/mixnet-sims/config/: mixnode.json
simlib/mixnet-sims/src/: log.rs  main.rs  settings.rs
simlib/mixnet-sims/src/node/mix/: consensus_streams.rs  lottery.rs  message.rs  mod.rs  scheduler.rs  state.rs  stream_wrapper.rs
simlib/netrunner/: Cargo.toml
simlib/netrunner/src/: lib.rs  settings.rs
simlib/netrunner/src/network/: mod.rs  regions.rs
simlib/netrunner/src/node/: dummy_streaming.rs  mod.rs
simlib/netrunner/src/output_processors/: mod.rs
simlib/netrunner/src/runner/: async_runner.rs  mod.rs  sync_runner.rs
simlib/netrunner/src/streaming/: io.rs  mod.rs  runtime_subscriber.rs  settings_subscriber.rs
transaction_fee_models/: README.md  eip-vs-stablefee.ipynb  simulation.py  simulation_parameters.py  tx_fees_models.py
(+36 files in other folders)
