[package]
name = "single-path"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.16"
csv = "1.3.0"
queue = { version = "0.1.0", path = "../queue" }
rand = "0.8.5"
rustc-hash = "2.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
opt-level = 3 # max optimization

[dev-dependencies]
strum = "0.26.3"
